--- a/CSS/tabla.css
+++ b/CSS/tabla.css
@@ -1,6 +1,4 @@
-
-
-#contenido{
+#contenido {
     width: 100%;
     max-height: 90vh;
 }
@@ -9,8 +7,8 @@
 
 /*seccion de consultas*/
 
-#consultas{
-    
+#consultas {
+
     margin-left: 10%;
     margin-top: 1%;
     width: 80%;
@@ -20,17 +18,17 @@
 
 /*tabla*/
 
-#tabulacion{
+#tabulacion {
     margin-left: 10%;
     width: 80%;
     height: 60vh;
-    overflow-y:auto ;
+    overflow-y: auto;
     margin-bottom: 2%;
     border: solid black;
     margin-top: 2%;
 }
 
-table{
+table {
     border-collapse: separate;
     border-spacing: 0;
     width: 100%;
@@ -47,11 +45,12 @@ thead {
 
 }
 
-th{
+th {
     border: 1px solid black;
     cursor: pointer;
 }
 
-tr:hover, th:hover{
+tr:hover,
+th:hover {
     background: rgb(162, 158, 158);
 }
